--- a/src/DiscordBot.csproj
+++ b/src/DiscordBot.csproj
@@ -7,6 +7,13 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="2.1.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\README.md">
+        <Link>README.md</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
