--- a/src/DiscordBot.csproj
+++ b/src/DiscordBot.csproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="2.1.1" />
+      <PackageReference Include="Discord.Net.Commands" Version="2.1.1" />
+      <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
